job api update
